# Cloud-Segmentation

./: .gitignore  pyproject.toml
cloud_seg/: dataset.py  model.py  play.py  train.py  utils.py
tests/: test_cloud_seg.py
