[tool.poetry]
name = "cloud-segmentation"
version = "0.1.0"
description = ""
authors = ["Ahmed"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.1"
torchvision = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
